# mergenX_demo

./: .env.example  .gitignore  CLOUD_DEPLOYMENT_CHECKLIST.md  DEPLOY_CHECKLIST.md  README.md  check_data.py  clean_json.py  commercial_expansion.py  data_expansion_script.py  final_check.py  fix_json_encoding.py  pyproject.toml  requirements.txt  test_normalize.py
data/: flights.json  hotels.json  transfers.json
src/: streamlit_app.py
src/data_generation/: data_validator.py  hotels_analyzer.py  hotels_cleaner.py  hotels_merger.py  hotels_stats.py  hotels_validator.py  hotels_verifier.py  synthetic_generator.py
src/model/: embeddings.py  llm_wrapper.py  search_engine.py  vector_store.py
