[project]
name = "mergenx-demo"
version = "0.1.0"
description = "MergenX - Ak覺ll覺 Seyahat Paketi Planlay覺c覺 (AI-Powered Travel Package Planner)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "groq>=1.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
